{
    "version": 1,
    "name": "GameControls",
    "maps": [
        {
            "name": "GameControl",
            "id": "1be2e1ca-39e6-4bcd-a303-3d61fce62249",
            "actions": [
                {
                    "name": "PauseAndResume",
                    "type": "Button",
                    "id": "9961f6a4-0125-42fe-8e5d-749fb8f3ac6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "1de74534-12b5-4210-983e-0c542a659da7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d5d2525e-5359-4998-bc0c-a4cebb090493",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseAndResume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96e81fd1-2626-4fa4-b631-218468315ac0",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseAndResume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c81b2fba-9d3a-4fd7-914b-be89214a80bc",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "Hold(duration=1)",
                    "processors": "",
                    "groups": "",
                    "action": "PauseAndResume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7980965d-042d-4863-89cd-c17f81972fda",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "930d6ec9-3599-4dde-8012-d404581dbfa1",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b3d7501-ae16-4739-a9d4-d2e1fcfc1360",
                    "path": "<Touchscreen>/Press",
                    "interactions": "MultiTap(tapCount=3)",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}